--- a/Reflix/src/App.css
+++ b/Reflix/src/App.css
@@ -5,16 +5,20 @@
         1px 1px 0 #ecf0f1;
 }
 
+body {
+    background-image: url(https://xbox-store-checker.com/assets/upload/game/2019/02/optimize/9wzdncrfj3tj-background.jpg);
+}
+
 #home-background {
-    background-image: url(https://thurrott.s3.amazonaws.com/wp-content/uploads/sites/2/2022/01/14172326/netflix.jpg);
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: cover;
-    opacity: 0.8;
+    opacity: 0.6;
     position: absolute;
     top: 0;
     left: 0;
     z-index: -1;
+    object-fit: fill;
 }
