--- a/Reflix/src/style/User.css
+++ b/Reflix/src/style/User.css
@@ -1,11 +1,25 @@
 .user {
-    background-color: aliceblue;
     display: inline-block;
     padding: 100px;
     margin: 10px;
+    border-radius: 10px;
+    background-size: cover;
+    color: black;
 }
 
 .user:hover {
-    background-color: black;
+    background-image: url(https://ih0.redbubble.net/image.618363037.0853/flat,1000x1000,075,f.u2.jpg);
     color: aliceblue;
+}
+.one {
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/0/0b/Netflix-avatar.png);
+}
+.two {
+    background-image: url(https://i.pinimg.com/736x/db/70/dc/db70dc468af8c93749d1f587d74dcb08.jpg);
+}
+.three {
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRfbfGQWWCdVmy5fWYVuTGk9fvnaUZx_r_1ohsTwrPyQTEKvD8BTIXK_JX7n7tj-DzFrHE&usqp=CAU);
+}
+.zero {
+    background-image: url(https://pbs.twimg.com/profile_images/1356333120992149505/-qvakEK7_400x400.jpg);
 }
