--- a/Reflix/src/App.css
+++ b/Reflix/src/App.css
@@ -6,6 +6,7 @@
 }
 
 body {
+    padding: 5px;
     background-image: url(https://xbox-store-checker.com/assets/upload/game/2019/02/optimize/9wzdncrfj3tj-background.jpg);
 }
 
